# three-component-memory-system

./: .gitignore  CHANGELOG.md  CHANGELOG_zh.md  CONTRIBUTING.md  README.md  README_zh.md  SKILL.md  SKILL.md.backup.20260318_204643  __init__.py  pyproject.toml  quick_check.py  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml  test_fixed.yml
docs/: README.md  api-reference.md  architecture.md  getting-started.md  troubleshooting.md
docs/zh/: README_zh.md  api-reference_zh.md  architecture_zh.md  getting-started_zh.md  troubleshooting_zh.md
examples/: basic_usage.py  quick_demo.py  quickstart.py
references/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  EXAMPLES.md  TROUBLESHOOTING.md
scripts/: backup_memories.py  check_health.py  diagnose.py  install.py  quick_demo.py  setup_env.sh  test_skill.py
src/: __init__.py  memory_core.py
src/three_component_memory/: __init__.py
tests/: test_basic.py  test_simple.py
